tests/ui/attributes/field-attributes-vis-unresolved.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nonexistent`
  --> $DIR/field-attributes-vis-unresolved.rs:17:12
   |
LL |     pub(in nonexistent) field: u8
   |            ^^^^^^^^^^^ use of unresolved module or unlinked crate `nonexistent`
   |
help: if you wanted to use a crate named `nonexistent`, use `cargo add nonexistent` to add it to your `Cargo.toml` and import it in your code
   |
LL + extern crate nonexistent;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nonexistent`
  --> $DIR/field-attributes-vis-unresolved.rs:22:12
   |
LL |     pub(in nonexistent) u8
   |            ^^^^^^^^^^^ use of unresolved module or unlinked crate `nonexistent`
   |
help: if you wanted to use a crate named `nonexistent`, use `cargo add nonexistent` to add it to your `Cargo.toml` and import it in your code
   |
LL + extern crate nonexistent;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
